# vortice_libs

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/D3D12MemoryAllocator/: CMakeLists.txt  c_exports.cpp
src/VorticeImage/: CMakeLists.txt
src/VorticeImage/include/: VorticeImage.h
src/VorticeImage/src/: VorticeImage.c  VorticeImagePrivate.h
src/vma/: CMakeLists.txt  vk_mem_alloc.cpp
src/vortice_image/: CMakeLists.txt  ktx_c_binding.cpp  vortice_image.cpp  vortice_image.h  vortice_image_private.h
